# PacmanPP

./: CMakeLists.txt  Collision_library.lib  Documentation.txt  README.md
header/: Ghosts.h  Manager.h  Pacman.h  collision.h  constants.h  fill_map.h  map_creator.h
src/: Ghosts.cpp  Manager.cpp  Pacman.cpp  collision.cpp  fill_map.cpp  main.cpp  map_creator.cpp
